# PHI-OMEGA-RUNTIME

./: .gitignore  .zenodo.json  AGENT_EXCHANGE_LOOP_EVAL.md  CITATION.cff  PHI_OMEGA_RUNTIME_AUDIT_LOG_1.md  PROVENANCE.md  PROVENANCE_MANIFEST.sha256  README.md  RIGHTS.md  SECURITY.md  TRANSITION_GAIN_LAYER.md  pyproject.toml  run_phi_omega.py
.github/workflows/: runtime_ci.yml
data/: runtime_failure_map.json  transition_sufficiency_conformance_cases.json
docs/: AFTER_USE.md  CLI_REFERENCE.md  CONTEXT_INDEXED_OBJECT_GUARD.md  PARENT_REPO.md  RUNTIME_EXTERNAL_CONVERGENCE_SIGNAL_2026_07_02.md  RUNTIME_FAILURE_MAP.md  SCENARIO_CUSTOM_EVAL_NOTE.md  STABLE_INTERFACE_V020.md  STRICT_BARE_LIMIT_OBJECT_GUARD.md  SUPPORT_FRESHNESS_FRAGMENT_REFINEMENT.md  TRANSITION_SCHEMA.md  TRANSITION_SUFFICIENCY_CONFORMANCE_CONTRACT.md
examples/: agent_exchange_loop_valid_case.json  agent_false_sufficiency_case.json  agent_local_pass_field_fail_case.json  external_evidence_case.json  external_trace_case.json  fake_preuse_case.json  minimal_case.json  transition_demo.json  transition_hard_block_demo.json
schemas/: audit_case.schema.json  transition_case.schema.json  transition_result.schema.json  transition_sufficiency_conformance_result.schema.json
src/phi_omega_runtime.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/phi_omega_transition/: __init__.py  agent_exchange_loop_eval.py  cli.py  core.py  runtime_audit.py  (+1 more)
tests/: test_agent_exchange_loop_eval_v013.py  test_context_indexed_object_guard_v011.py  test_phi_omega_transition.py  test_readme_v021_doi.py  test_readme_v022_doi.py  test_runtime_external_convergence_signal.py  test_runtime_failure_map.py  test_runtime_rejects_fake_use.py  test_runtime_valid_entry.py  test_scenario_custom_eval_adapter_v014.py  test_schema_cli_stabilization_v020.py  test_strict_bare_limit_object_guard_v012.py  test_support_freshness_fragment_refinement.py  test_transition_gain_layer_v017.py  test_transition_sufficiency_conformance_contract.py  test_transition_sufficiency_v019.py  test_zenodo_metadata_v016.py
tools/: agent_exchange_loop_eval.py  runtime_failure_map.py  transition_sufficiency_conformance.py
