[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "phi-omega-runtime"
version = "0.1.0"
description = "Compact use-first runtime extracted from PHI-OMEGA-OPERATIONAL-FORMULA."
requires-python = ">=3.9"

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.scripts]
phi-omega-demo = "phi_omega_transition.cli:demo"
phi-omega-check = "phi_omega_transition.cli:check"

[tool.setuptools.packages.find]
where = ["src"]
